--- a/gatoMunchkin.html
+++ b/gatoMunchkin.html
@@ -5,23 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/recursos/estilos/styleMun.css">
     <title>Gato Munchkin</title>
 </head>
 
-<body>
+<body class="fondoHuellitas">
     <div>
-        <h1>Gato Munchkin</h1>
+        <h1 class="fuenteTitulo">Gato Munchkin</h1>
     </div>
     <div>
 
         <img src="/recursos/imagenes/gatoMunchkin.jpg" alt="gatoMunchkin">
+        <br><br><br>
     </div>
     <div>
-        <h3>
+        <h3 class="fuenteSubtitulos">
 
             Origen
         </h3>
-        <p>
+        <p class="fuenteParrafos">
             Esta raza, considerada el equivalente felino al perro salchicha, ha provocado controversia en el mundo de
             los gatos. La mutación del munchkin se descubrió en Estados Unidos en 1983, donde este gato fue bautizado
             con el nombre de la «gente pequeña» de El Mago de Oz. Se tiene constancia de gatos de patas cortas, como el
@@ -29,29 +31,31 @@
             En el Reino Unido, esta raza no es reconocida por la principal asociación británica de amigos de los gatos.
 
         </p>
-
+<br><br><br>
     </div>
     <div>
 
-        <p>
-        <h3>
-
+        <h3 class="fuenteSubtitulos">
+            
             Personalidad
         </h3>
-
+        
+        <p class="fuenteParrafos">
         Los munchkin son dulces y extrovertidos. Su curiosidad y sus ganas de jugar se mantienen hasta bien entrada
         la edad adulta. El munchkin es sociable y le encanta la compañía. Se le puede enseñar a traer cosas y a
         obedecer órdenes. Aunque pueden saltar a las encimeras, muchos prefieren buscar un modo más sencillo de
         llegar hasta arriba. También corren deprisa, a pesar de lo cortas que son las patas.
 
         </p>
+        <br><br><br>>
+
     </div>
     <div>
-        <h3>
+        <h3 class="fuenteSubtitulos">
             Nutrición
 
         </h3>
-        <p>
+        <p class="fuenteParrafos">
             Cada gato es único y tiene sus propios gustos, aversiones y necesidades particulares en lo que respecta a la
             comida. Sin embargo, los gatos son carnívoros y deben obtener 41 nutrientes diferentes y específicos de los
             alimentos que ingieren. La proporción de estos nutrientes variará según la edad, el estilo de vida y la
@@ -61,19 +65,27 @@
             alimentación y atender las preferencias individuales por lo que respecta a las recetas de comida seca o
             húmeda.
         </p>
+        <br><br><br>
 
     </div>
     <div>
-        <h3>
+        <h3 class="fuenteSubtitulos">
             Salud
         </h3>
-        <p>
+        <p class="fuenteParrafos">
             La cortedad de las patas de esta raza es una malformación asociada a problemas óseos y espinales, por lo que
             no todas las asociaciones felinas la ven con buenos ojos. Se sabe que las razas de perros de constitución
             similar sufren de artritis y se teme que ocurra lo mismo con el munchkin. Como todos los gatos, los
             munchkins necesitan vacunaciones, control antiparasitario y un chequeo veterinario anual.
         </p>
+        <br><br><br>
     </div>
+
+
+
+    <footer>
+        <a href='https://www.freepik.es/vectores/fondo'>Vector de Fondo creado por starline - www.freepik.es</a>
+    </footer>
 </body>
 
 </html>
