--- a/gatoMunchkin.html
+++ b/gatoMunchkin.html
@@ -10,77 +10,71 @@
 </head>
 
 <body class="fondoHuellitas">
-    <div>
-        <h1 class="fuenteTitulo">Gato Munchkin</h1>
-    </div>
-    <div>
+    <h1 class="fuenteTitulo">Gato Munchkin</h1>
+    <br><br><br><br><br>
 
-        <img src="/recursos/imagenes/gatoMunchkin.jpg" alt="gatoMunchkin">
-        <br><br><br>
-    </div>
-    <div>
-        <h3 class="fuenteSubtitulos">
+    <img src="/recursos/imagenes/gatoMunchkin.jpg" alt="gatoMunchkin">
+    <br><br><br><br>
 
-            Origen
-        </h3>
-        <p class="fuenteParrafos">
-            Esta raza, considerada el equivalente felino al perro salchicha, ha provocado controversia en el mundo de
-            los gatos. La mutación del munchkin se descubrió en Estados Unidos en 1983, donde este gato fue bautizado
-            con el nombre de la «gente pequeña» de El Mago de Oz. Se tiene constancia de gatos de patas cortas, como el
-            munchkin, en Inglaterra en los años treinta y en Rusia en los cincuenta, pero estas razas no se perpetuaron.
-            En el Reino Unido, esta raza no es reconocida por la principal asociación británica de amigos de los gatos.
+    <h3 class="fuenteSubtitulos">
 
-        </p>
-<br><br><br>
-    </div>
-    <div>
+        Origen
+    </h3>
+    <br>
+    <p class="fuenteParrafos centrar">
+        Esta raza, considerada el equivalente felino al perro salchicha, ha provocado controversia en el mundo de
+        los gatos. La mutación del munchkin se descubrió en Estados Unidos en 1983, donde este gato fue bautizado
+        con el nombre de la «gente pequeña» de El Mago de Oz. Se tiene constancia de gatos de patas cortas, como el
+        munchkin, en Inglaterra en los años treinta y en Rusia en los cincuenta, pero estas razas no se perpetuaron.
+        En el Reino Unido, esta raza no es reconocida por la principal asociación británica de amigos de los gatos.
 
-        <h3 class="fuenteSubtitulos">
-            
-            Personalidad
-        </h3>
-        
-        <p class="fuenteParrafos">
+    </p>
+    <br><br><br>
+
+
+    <h3 class="fuenteSubtitulos">
+
+        Personalidad
+    </h3>
+    <br>
+    <p class="fuenteParrafos">
         Los munchkin son dulces y extrovertidos. Su curiosidad y sus ganas de jugar se mantienen hasta bien entrada
         la edad adulta. El munchkin es sociable y le encanta la compañía. Se le puede enseñar a traer cosas y a
         obedecer órdenes. Aunque pueden saltar a las encimeras, muchos prefieren buscar un modo más sencillo de
         llegar hasta arriba. También corren deprisa, a pesar de lo cortas que son las patas.
 
-        </p>
-        <br><br><br>>
+    </p>
+    <br><br><br>>
 
-    </div>
-    <div>
-        <h3 class="fuenteSubtitulos">
-            Nutrición
 
-        </h3>
-        <p class="fuenteParrafos">
-            Cada gato es único y tiene sus propios gustos, aversiones y necesidades particulares en lo que respecta a la
-            comida. Sin embargo, los gatos son carnívoros y deben obtener 41 nutrientes diferentes y específicos de los
-            alimentos que ingieren. La proporción de estos nutrientes variará según la edad, el estilo de vida y la
-            salud en general, por lo que no sorprende que un gatito enérgico y en crecimiento necesite un equilibrio de
-            nutrientes diferente en su dieta que un gato senior menos activo. Otras consideraciones que deben tenerse en
-            cuenta son darle la cantidad adecuada de comida para mantener el «estado corporal ideal» según las pautas de
-            alimentación y atender las preferencias individuales por lo que respecta a las recetas de comida seca o
-            húmeda.
-        </p>
-        <br><br><br>
+    <h3 class="fuenteSubtitulos">
+        Nutrición
 
-    </div>
-    <div>
-        <h3 class="fuenteSubtitulos">
-            Salud
-        </h3>
-        <p class="fuenteParrafos">
-            La cortedad de las patas de esta raza es una malformación asociada a problemas óseos y espinales, por lo que
-            no todas las asociaciones felinas la ven con buenos ojos. Se sabe que las razas de perros de constitución
-            similar sufren de artritis y se teme que ocurra lo mismo con el munchkin. Como todos los gatos, los
-            munchkins necesitan vacunaciones, control antiparasitario y un chequeo veterinario anual.
-        </p>
-        <br><br><br>
-    </div>
+    </h3>
+    <br>
+    <p class="fuenteParrafos">
+        Cada gato es único y tiene sus propios gustos, aversiones y necesidades particulares en lo que respecta a la
+        comida. Sin embargo, los gatos son carnívoros y deben obtener 41 nutrientes diferentes y específicos de los
+        alimentos que ingieren. La proporción de estos nutrientes variará según la edad, el estilo de vida y la
+        salud en general, por lo que no sorprende que un gatito enérgico y en crecimiento necesite un equilibrio de
+        nutrientes diferente en su dieta que un gato senior menos activo. Otras consideraciones que deben tenerse en
+        cuenta son darle la cantidad adecuada de comida para mantener el «estado corporal ideal» según las pautas de
+        alimentación y atender las preferencias individuales por lo que respecta a las recetas de comida seca o
+        húmeda.
+    </p>
+    <br><br><br>
 
+    <h3 class="fuenteSubtitulos">
+        Salud
+    </h3>
+    <br>
+    <p class="fuenteParrafos">
+        La cortedad de las patas de esta raza es una malformación asociada a problemas óseos y espinales, por lo que
+        no todas las asociaciones felinas la ven con buenos ojos. Se sabe que las razas de perros de constitución
+        similar sufren de artritis y se teme que ocurra lo mismo con el munchkin. Como todos los gatos, los
+        munchkins necesitan vacunaciones, control antiparasitario y un chequeo veterinario anual.
+    </p>
+    <br><br><br>
 
 
     <footer>
