modificacion del texto

--- a/gatoMunchkin.html
+++ b/gatoMunchkin.html
@@ -21,7 +21,7 @@
         Origen
     </h3>
     <br>
-    <p class="fuenteParrafos centrar">
+    <p class="fuenteParrafos centrar centrar">
         Esta raza, considerada el equivalente felino al perro salchicha, ha provocado controversia en el mundo de
         los gatos. La mutación del munchkin se descubrió en Estados Unidos en 1983, donde este gato fue bautizado
         con el nombre de la «gente pequeña» de El Mago de Oz. Se tiene constancia de gatos de patas cortas, como el
@@ -37,7 +37,7 @@
         Personalidad
     </h3>
     <br>
-    <p class="fuenteParrafos">
+    <p class="fuenteParrafos centrar">
         Los munchkin son dulces y extrovertidos. Su curiosidad y sus ganas de jugar se mantienen hasta bien entrada
         la edad adulta. El munchkin es sociable y le encanta la compañía. Se le puede enseñar a traer cosas y a
         obedecer órdenes. Aunque pueden saltar a las encimeras, muchos prefieren buscar un modo más sencillo de
@@ -52,7 +52,7 @@
 
     </h3>
     <br>
-    <p class="fuenteParrafos">
+    <p class="fuenteParrafos centrar">
         Cada gato es único y tiene sus propios gustos, aversiones y necesidades particulares en lo que respecta a la
         comida. Sin embargo, los gatos son carnívoros y deben obtener 41 nutrientes diferentes y específicos de los
         alimentos que ingieren. La proporción de estos nutrientes variará según la edad, el estilo de vida y la
@@ -68,7 +68,7 @@
         Salud
     </h3>
     <br>
-    <p class="fuenteParrafos">
+    <p class="fuenteParrafos centrar">
         La cortedad de las patas de esta raza es una malformación asociada a problemas óseos y espinales, por lo que
         no todas las asociaciones felinas la ven con buenos ojos. Se sabe que las razas de perros de constitución
         similar sufren de artritis y se teme que ocurra lo mismo con el munchkin. Como todos los gatos, los
