Creacion de barra

--- a/gatoMunchkin.html
+++ b/gatoMunchkin.html
@@ -10,7 +10,10 @@
 </head>
 
 <body class="fondoHuellitas">
-    <h1 class="fuenteTitulo">Gato Munchkin</h1>
+    <div class="titulo">
+        <h1 class="fuenteTitulo">Gato Munchkin</h1>
+
+    </div>
     <br><br><br><br><br>
 
     <img src="/recursos/imagenes/gatoMunchkin.jpg" alt="gatoMunchkin">
