correccion de errores

--- a/gatoMunchkin.html
+++ b/gatoMunchkin.html
@@ -15,8 +15,10 @@
 
     </div>
     <br><br><br><br><br>
+    <div >
 
-    <img src="/recursos/imagenes/gatoMunchkin.jpg" alt="gatoMunchkin">
+        <img src="/recursos/imagenes/gatoMunchkin.jpg" alt="gatoMunchkin" class="imagen">
+    </div>
     <br><br><br><br>
 
     <h3 class="fuenteSubtitulos">
