correcciones de estilos

--- a/Itzelindex.html
+++ b/Itzelindex.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Itzel Ramirezz">
-    <link rel="stylesheet" href="Recursos/Itzelestilos.css">
-    <link rel="shortcut icon" href="Recursos/media/Gato.jpg">
+    <link rel="stylesheet" href="estilos/Itzelestilos.css">
+    <link rel="shortcut icon" href="estilos/recursos/imagenes/Gato.jpg">
 
     <title>Document</title>
 </head>
@@ -19,7 +19,7 @@
                     <div class="fondoimagen">
                         <h1> Gatos siameses </h1>
                         <h1>
-                            <img src="Recursos/media/Siames.jpg" alt="Imagen JPEG de HK">
+                            <img src="estilos/recursos/imagenes/Siames.jpg" alt="Imagen JPEG de HK">
                         </h1>
                     </div>
                     <div>
@@ -41,12 +41,12 @@
                             <tr>
                                 
                                 <th>
-                                    <a href="https://www.google.com/search?q=siames+tradicional&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjazuXayun0AhXSAZ0JHe1oAq8Q_AUoAXoECAIQAw&biw=1280&bih=600&dpr=1"> <img src="Recursos/media/Chita.jpg"/> </a>
+                                    <a href="https://www.google.com/search?q=siames+tradicional&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjazuXayun0AhXSAZ0JHe1oAq8Q_AUoAXoECAIQAw&biw=1280&bih=600&dpr=1"> <img src="estilos/recursos/imagenes/Chita.jpg"/> </a>
                                     <th>Siames Tradicional</th>
                                 </th>
                             <tr>
                                 <td>
-                                    <a href="https://www.google.com/search?q=siames+moderno&tbm=isch&ved=2ahUKEwjGqNPdyun0AhUBWq0KHVQWAhIQ2-cCegQIABAA&oq=siames+moderno&gs_lcp=CgNpbWcQAzIFCAAQgAQyBQgAEIAEMgUIABCABDIGCAAQBRAeMgYIABAFEB4yBggAEAUQHjIGCAAQCBAeMgQIABAYOgQIABBDOgYIABAHEB5Qqg5Y5BNg9xdoAHAAeACAAe8BiAHKCpIBBTAuNi4ymAEAoAEBqgELZ3dzLXdpei1pbWfAAQE&sclient=img&ei=j9q7YYalEYG0tQXUrIiQAQ&bih=600&biw=1280"> <img src="Recursos/media/Moderno.jpg"/> </a>
+                                    <a href="https://www.google.com/search?q=siames+moderno&tbm=isch&ved=2ahUKEwjGqNPdyun0AhUBWq0KHVQWAhIQ2-cCegQIABAA&oq=siames+moderno&gs_lcp=CgNpbWcQAzIFCAAQgAQyBQgAEIAEMgUIABCABDIGCAAQBRAeMgYIABAFEB4yBggAEAUQHjIGCAAQCBAeMgQIABAYOgQIABBDOgYIABAHEB5Qqg5Y5BNg9xdoAHAAeACAAe8BiAHKCpIBBTAuNi4ymAEAoAEBqgELZ3dzLXdpei1pbWfAAQE&sclient=img&ei=j9q7YYalEYG0tQXUrIiQAQ&bih=600&biw=1280"> <img src="estilos/recursos/imagenes/Moderno.jpg"/> </a>
                                     <th>Siames Moderno</th>
                                 </td>
                             </tr>
