--- a/gatoMunchkin.html
+++ b/gatoMunchkin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/recursos/estilos/styleMun.css">
+    <link rel="stylesheet" href="estilos/styleMun.css">
     <title>Gato Munchkin</title>
 </head>
 
@@ -17,7 +17,7 @@
     <br><br><br><br><br>
     <div>
 
-        <img src="/recursos/imagenes/gatoMunchkin.jpg" alt="gatoMunchkin" class="imagen">
+        <img src="estilos/recursos/imagenes/gatoMunchkin.jpg" alt="gatoMunchkin" class="imagen">
     </div>
     <br><br><br><br>
 
