--- a/gatoEgipcio.html
+++ b/gatoEgipcio.html
@@ -122,7 +122,8 @@ Según la publicación del libro, este pequeño animalito es la mascota favorita
         
         <p align="center"><iframe width="420" height="315"src="https://www.youtube.com/embed/9KZnpmgeUwo?autoplay=1&mute=1&playlist=9KZnpmgeUwo&loop=1"></iframe></p>
         
-        <li class="tipografia2"><a href="">Regresar al inicio</a></li>
+        <li class="tipografia2"><a href="index.html">Regresar al inicio</a></li>
+        <li class="tipografia2"><a href="https://github.com/carlosberserker01">Carlos Lopez GitHub</a></li>
     </div>
 
 </body>
