ajuste de icono

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Esta pagina es acerca de los gatos">
     <meta name="keywords" content="gatos, razas">
     <link rel="stylesheet" type="text/css" href="estilos/estilos.css">
-   
+    <link rel="shortcut icon" href="logo1.svg">
     <title>LOS GATOS</title>
 
 
@@ -19,7 +19,7 @@
     <header>
         <div id="subheader">
             <div id="logotipo">
-                <p><a href="logo1.svg">LOS GATOS </a></p>
+                <p><a href="index.html">LOS GATOS</p>
             </div>
             <nav>
                 <ul>
