--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ Para garantizarnos una convivencia feliz, en este artículo de ExpertoAnimal rep
 
                         <li><a href="gatoEgipcio.html">Egipcio </a> </li>
 
-                        <li><a href="#"> Persa </a> </li>
+                        <li><a href="gatoPersa.html"> Persa </a> </li>
                     
 
                        
